# techread

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/agents/: claude-aware-reviewer.md
.github/workflows/: ci.yml
docs/: spec.md
docs/poc/: findings.md
src/techread/: __main__.py
src/techread/api/: qiita.py
src/techread/db/: store.py
src/techread/renderer/: markdown.py
src/techread/ui/: selector.py
tests/: test_qiita.py  test_renderer.py  test_selector.py  test_store.py
tests/api/: test_qiita.py
tests/db/: test_store.py
tests/renderer/: test_renderer.py
tests/ui/: test_selector.py
